# newRedisVirtualFileServer

./: CMakeLists.txt  app  makeAndRunTests.sh  runAllTests
test/: test.cc
